[gd_scene load_steps=18 format=3 uid="uid://dm48hw6k867y8"]

[ext_resource type="Script" uid="uid://bu65jfbploenj" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://b51d4anjvipea" path="res://Assets/sprites/slime_green.png" id="1_hghv2"]
[ext_resource type="Script" uid="uid://ihpeq88a8f7v" path="res://Scripts/hitbox.gd" id="3_afpow"]
[ext_resource type="Script" uid="uid://b2brw5lmbu5dp" path="res://Scripts/hurt_box.gd" id="4_287tu"]
[ext_resource type="AudioStream" uid="uid://cgun25xvgs4fe" path="res://Assets/sounds/hurt.wav" id="5_0830c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("1_hghv2")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("1_hghv2")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("1_hghv2")
region = Rect2(48, 54, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("1_hghv2")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0kj"]
atlas = ExtResource("1_hghv2")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("1_hghv2")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("1_hghv2")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("1_hghv2")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghaa6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_287tu"]
size = Vector2(26, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0830c"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghaa6"]
size = Vector2(8, 10)

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(-4, 0)
collision_layer = 260
collision_mask = 256
script = ExtResource("1_1f0kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ghaa6")
animation = &"hit"
autoplay = "idle"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_afpow")
metadata/_custom_type_script = "uid://ihpeq88a8f7v"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_287tu")
debug_color = Color(0, 0.486427, 0.319295, 0.42)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_287tu")
metadata/_custom_type_script = "uid://b2brw5lmbu5dp"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_0830c")
debug_color = Color(0.918444, 0.25756, 0.316243, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ghaa6")
debug_color = Color(0.203269, 0.359972, 0.777605, 0.42)

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0830c")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(13, 0)
collide_with_areas = true

[node name="RayCastRightArea" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(6, 0)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-13, 0)
collision_mask = 17
collide_with_areas = true

[node name="RayCastLeftArea" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-6, 0)
collide_with_areas = true

[node name="RayCastBtLeft" type="RayCast2D" parent="."]
target_position = Vector2(-16, 17)

[node name="RayCastBtRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 17)
